fix(design): Add spacing in menu, improving readability

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -16,6 +16,7 @@
 .header__nav {
   display: flex;
   justify-content: space-between;
+  gap: 2em;
   margin: 0.5em 0;
 }
 .header__nav > * {
